# node-sie-wbxml

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json  tsconfig.json
.github/workflows/: ci.yml
src/: index.ts  main.c
